# Exodus

./: .codecov.yml  .env.example  .gitignore  ACCESSIBILITY_AUDIT.md  AEROSPACE_GRADE_SANDBOX.md  AEROSPACE_LEVEL_AUDIT.md  ALLAMA_INTEGRATION.md  AUDIT_REPORT.md  CHANGELOG.md  CLOUD_SYNC_ARCHITECTURE.md  CODE_AUDIT_REPORT.md  CODE_AUDIT_REPORT_2026.md  CODE_COMPLETION_AUDIT.md  CODE_COMPLETION_AUDIT_2026.md  CODE_IMPROVEMENTS_REPORT.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_CODE_AUDIT_REPORT.md  CONTRIBUTING.md  Cargo.toml  EXTENSION_API_AUDIT_REPORT.md  FEATURES_IMPLEMENTED.md  FEATURE_GAP_ANALYSIS_2026.md  FINAL_AUDIT_REPORT.md  FINAL_COMPREHENSIVE_REPORT.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY_2026.md  LICENSE  MEMORY_LEAK_AUDIT_REPORT.md  MICROSERVICES.md  MICROSERVICE_ARCHITECTURE.md  MICROSERVICE_AUDIT_REPORT.md  MICROSERVICE_INTEGRATION_GUIDE.md  MISSING_FEATURES_AUDIT.md  MODEL_CONFIGURATION.md  OPENCLAW_AUDIT_REPORT.md  OPENCLAW_WASM_COMPILATION_GUIDE.md  PLUGIN_SYSTEM_ARCHITECTURE.md  PLUGIN_SYSTEM_AUDIT.md  PROGRESS_REPORT.md  PYTHON_INTEGRATION.md  (+35 more)
examples/native-plugin/: Cargo.toml  README.md
examples/native-plugin/src/: lib.rs
exodus-core/: Cargo.toml
exodus-core/src/: main.rs
exodus-hub-server/: AUDIT_REPORT.md  Cargo.toml  GROUP_CHAT_SERVICE_AUDIT.md  INTEGRATION_STATUS.md  README.md
exodus-hub-server/docs/: IROH_ARCHITECTURE_ANALYSIS.md  P2P_STORAGE_INTEGRATION.md  P2P_SYNC_ARCHITECTURE.md  SYNC_API.md
exodus-hub-server/examples/: p2p_chat.rs  p2p_direct.rs  p2p_storage_integration.rs  sync_client.rs
exodus-hub-server/src/: group_assistant.rs  lib.rs  main.rs  manager.rs  server.rs  video_conference.rs  wechat_official.rs
exodus-hub-server/src/p2p/: gossip.rs  mod.rs  node.rs  storage.rs  sync_strategy.rs  topic.rs
exodus-hub-server/tests/: group_assistant_tests.rs  integration_sync_tests.rs  p2p_comprehensive_tests.rs  p2p_tests.rs  sync_tests.rs  video_conference_tests.rs  wechat_official_tests.rs
services/exodus-rag-service/: Cargo.toml
services/exodus-rag-service/src/: main.rs
servo-browser/: Cargo.toml  README.md
servo-browser/exodus_rag_db/: db
servo-browser/src/: agent.rs  main.rs  rag.rs  sidecar.rs
src-tauri/: Cargo.toml  loading.html  tauri.conf.json
src-tauri/assets/: tracker-blocklist.json
src-tauri/binaries/: README.md  exodus-core-aarch64-apple-darwin  exodus-core-universal-apple-darwin  exodus-core-x86_64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/src/: agent.rs  ai.rs  ai_integration_test.rs  allama_manager.rs  allama_stack_test.rs  annotation.rs  app_lifecycle.rs  app_tray.rs  app_window.rs  audio_visualization.rs  auth.rs  auth_commands.rs  biometric_auth.rs  bookmark_suggestions.rs  bookmark_sync.rs  browser.rs  browser_resilience.rs  certificate_validation.rs  chat_collections.rs  chat_collections_test.rs  cloud_sync.rs  color_blind.rs  comprehensive_tests.rs  config.rs  content_script.rs  cookie_manager.rs  dark_mode.rs  data_saver.rs  devtools.rs  discarded_tabs.rs  dns_over_https.rs  dns_prefetch.rs  download_manager.rs  downloads.rs  embeddings.rs  encrypted_sync.rs  exodus_workspace.rs  extension_api.rs  extension_permissions.rs  file_transfer_engine.rs  (+100 more)
src-tauri/src/microservice/: CONTACT_DIRECTORY_AEROSPEC.md  agent_discovery_commands.rs  agent_discovery_service.rs  ai_agent_commands.rs  ai_agent_service.rs  ai_model_commands.rs  ai_model_service.rs  ai_video_analysis_commands.rs  ai_video_analysis_service.rs  allama_commands.rs  allama_gateway.rs  allama_http_client.rs  allama_process.rs  allama_service.rs  bus.rs  chat_storage.rs  circuit_breaker.rs  clipboard_sync_commands.rs  clipboard_sync_service.rs  collaborative_editing_commands.rs  collaborative_editing_service.rs  config_manager.rs  contact_directory_commands.rs  contact_directory_hub.rs  contact_directory_service.rs  contact_directory_service_test.rs  crypto_commands.rs  crypto_service.rs  distributed_tracing.rs  file_transfer_commands.rs  file_transfer_hub.rs  file_transfer_service.rs  gossip_client.rs  group_assistant.rs  group_chat_client.rs  group_chat_commands.rs  group_chat_service.rs  log_collector.rs  media_streaming_commands.rs  media_streaming_service.rs  (+31 more)
src-tauri/src/native_plugins/: integration_test.rs  mod.rs  sandbox.rs  sandbox_integration_test.rs  sandbox_runner.rs  tests.rs
src-tauri/src/p2p_cdn/: commands.rs  download.rs  external_gossip.rs  gossip_bridge.rs  integration_tests.rs  iroh_adapter.rs  mesh_fetch.rs  mesh_server.rs  mesh_ticket.rs  mod.rs  store.rs  swarm.rs  types.rs
src-tauri/src/plugins/: alarms.rs  background.rs  bookmarks_commands.rs  browser_site_permissions.rs  chrome_bridge.rs  commands.rs  comprehensive_tests.rs  context_menu_commands.rs  context_menus.rs  cookies_commands.rs  crx.rs  dev_extensions_tests.rs  downloads_commands.rs  error.rs  extension_popup.rs  extension_url.rs  history_commands.rs  host_install_pending.rs  hot_reload.rs  hot_reload_commands.rs  identity_commands.rs  inject.rs  management_commands.rs  manager.rs  manifest.rs  match_patterns.rs  mod.rs  (+27 more)
(+828 files in other folders)
