[package]
name = "exodus-core"
version = "0.1.0"
description = "Exodus local inference sidecar (OpenAI-compatible dev API)"
edition = "2021"

[[bin]]
name = "exodus-core"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
