[package]
name = "exodus-hub-server"
version = "0.1.0"
edition = "2021"
description = "Exodus Hub Server - Core service for managing chat, groups, WeChat official accounts, video conferencing, and P2P coordination"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
futures-util = "0.3"
sha2 = "0.10"
zstd = "0.13"
bincode = "1.3"
tower = "0.5"
hex = "0.4"

[dev-dependencies]
tempfile = "3.8"
reqwest = { version = "0.12", features = ["json"] }
