[package]
name = "exodus-servo"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# Window and WebView (using wry like Tauri but pure Rust)
winit = "0.29"
wry = "0.44"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database for RAG
sled = "0.34"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
log = "0.4"
env_logger = "0.10"

# HTTP client for fetching pages
reqwest = { version = "0.12", features = ["json"] }

# HTML parsing for DOM access
scraper = "0.20"
selectors = "0.25"
