[package]
name = "exodus-example-plugin"
version = "0.1.0"
edition = "2021"

[workspace]
# This is a standalone plugin, not part of the main workspace

[lib]
crate-type = ["cdylib"]

[dependencies]
exodus-plugin-sdk = { path = "../../exodus-plugin-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
